kubernetes/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantmingle-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantmingle-be
  template:
    metadata:
      labels:
        app: plantmingle-be
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: plantmingle-be
          image: cerit.io/xrehako1/plantmingle-be-image
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1000Mi"
              cpu: "1"
            limits:
              memory: "2000Mi"
              cpu: "2"
